Fix pagination numbers overflow

--- a/styles.scss
+++ b/styles.scss
@@ -198,6 +198,7 @@ body {
 					margin: 0;
 					padding: 0;
 					list-style-type: none;
+					overflow-wrap: anywhere;
 
 					li {
 						display: inline;
